# api/swagger.json
@@ -8,6 +8,16 @@
             "email": "leomoreira.com@gmail.com"
         }
     },
+    "components": {
+        "securitySchemes": {
+            "authorization": {
+                "in": "headers",
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
+            }
+        }
+    },
     "paths": {
         "/credor": {
             "post": {
@@ -108,17 +118,11 @@
                             "type": "string"
                         },
                         "required": true
-                    },
+                    }
+                ],
+                "security": [
                     {
-                        "name": "authorization",
-                        "in": "header",
-                        "schema": {
-                            "type": "string",
-                            "format": "jwt"
-                        },
-                        "required": true,
-                        "example": "Bearer 'token'"
-                        
+                        "authorization": []
                     }
                 ],
                 "requestBody": {
@@ -166,8 +170,8 @@
                                 }
                             }
                         }
-                    }
-                    ,"401": {
+                    },
+                    "401": {
                         "description": "Unauthorized!"
                     },
                     "404": {
@@ -383,6 +387,213 @@
                     },
                     "500": {
                         "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/payment": {
+            "post": {
+                "tags": ["Payment"],
+                "summary": "Create a payment",
+                "description": "Create a new payment",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "cpf": {
+                                        "type": "string"
+                                    },
+                                    "delivery_id": {
+                                        "type": "string",
+                                        "format": "uuid"
+                                    },
+                                    "credor_id": {
+                                        "type": "string",
+                                        "format": "uuid"
+                                    },
+                                    "ente_devedor_id": {
+                                        "type": "string",
+                                        "format": "uuid"
+                                    },
+                                    "start_value": {
+                                        "type": "float"
+                                    },
+                                    "end_value": {
+                                        "type": "float"
+                                    },
+                                    "date": {
+                                        "type": "string",
+                                        "format": "date-time"
+                                    }
+                                },
+                                "example": {
+                                    "delivery_id": "ebfda7d4-3bfd-451a-b543-c60f3a4bf26b",
+                                    "credor_id": "83f00ee6-05e7-4b84-b398-99cdc31df479",
+                                    "ente_devedor_id": "48afbfc3-f773-4458-99c7-4cf5040f18a7",
+                                    "start_value": 42000.5,
+                                    "end_value": 30000.25,
+                                    "date": "2021-11-08T13:49:17.244Z"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Invalid payment"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "get": {
+                "tags": ["Payment"],
+                "summary": "List payments",
+                "description": "List all payments",
+                "security": [
+                    {
+                        "authorization": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "delivery_id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "credor_id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "ente_devedor_id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "status": {
+                                                "type": "string"
+                                            },
+                                            "reason": {
+                                                "type": "string"
+                                            },
+                                            "start_value": {
+                                                "type": "float"
+                                            },
+                                            "end_value": {
+                                                "type": "float"
+                                            },
+                                            "date": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "No payments found"
+                    }
+                }
+            }
+        },
+        "/payment/invalid": {
+            "get": {
+                "tags": ["Payment"],
+                "summary": "List invalid payments",
+                "description": "List all invalid payments",
+                "security": [
+                    {
+                        "authorization": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "delivery_id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "credor_id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "ente_devedor_id": {
+                                                "type": "string",
+                                                "format": "uuid"
+                                            },
+                                            "status": {
+                                                "type": "string"
+                                            },
+                                            "reason": {
+                                                "type": "string"
+                                            },
+                                            "start_value": {
+                                                "type": "float"
+                                            },
+                                            "end_value": {
+                                                "type": "float"
+                                            },
+                                            "date": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "format": "date-time"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "No invalid payments found"
                     }
                 }
             }
